fixes html error

--- a/SignalPatterns/data/index.html
+++ b/SignalPatterns/data/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>  
         
-        <label for="calculated-duration"></label>Durchgang:</label>
+        <span>1 Durchgang = </span>
         <span class="calculated-duration" id="calculated-duration"></span>
 
         <div class="morse-display" id="morseDisplay"></div>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="pattern-input">
-          <label for="calculated-duration"></label>Durchgang:</label>
+          <span>1 Durchgang = </span>
           <span class="calculated-duration" id="calculatedDuration"></span>
           <label>Phasen-Dauern (ms):</label>
           <div class="pattern-phases" id="patternPhases">
