Adds Buy Me A Coffe Button :P

--- a/SignalPatterns/data/index.html
+++ b/SignalPatterns/data/index.html
@@ -131,6 +131,19 @@
       </div>
     </div>
   </div>
+  <div class="card">
+    <div class="bmc-container">
+      <a href="https://buymeacoffee.com/mcmxcv" target="_blank" rel="noopener noreferrer">
+        <img src="img/bmc-brand-logo.svg" alt="https://buymeacoffee.com/mcmxcv">
+      </a>
+      <a href="https://buymeacoffee.com/mcmxcv" target="_blank" rel="noopener noreferrer">
+        <img src="img/buy_me_a_coffee.svg" alt="https://buymeacoffee.com/mcmxcv">
+      </a>
+      <div class="cut-card-txt">
+        <span class="tw-page-link truncate mr-3 xs:mr-0"><a href="https://buymeacoffee.com/mcmxcv" target="_blank" rel="noopener noreferrer">buymeacoffee.com/mcmxcv</a></span>
+      </div>
+    </div>
+  </div>
 
 
   <script src="script.js"></script>
